style: fixed mobile sidebar moving too much to the left

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -98,7 +98,7 @@
     }
 
     #navbarMenu.slide-from-right {
-      transform: translateX(0%);
+      transform: translateX(15%);
       transition: 0.5s;
       z-index: 2;
     }
